# Henigma-Engine

./: CMakeLists.txt  a.out  komponenta.cpp  komponenta.h  make.sh  objekt.cpp  objekt.h  ostalo.cpp  ostalo.h  render.cpp  render.h  test.cpp  upodabljalnik.cpp  upodabljalnik.h
Komponente/: komponenta.h  pisava.h  tekst.h  transformacija.cpp  transformacija.h  upodabljalnik.cpp  upodabljalnik.h
Objekt/: objekt.cpp  objekt.h  scena.cpp  scena.h
Ostalo/: ostalo.h
Render/: render.cpp  render.h
